# blurNoise

./: .gitignore  .gitmodules  CMakeLists.txt  mayaConfigure.bat  meson.build  quick_compile.bat
.github/workflows/: main.yml
src/: OpenSimplex2F.cpp  OpenSimplex2F.h  blurNoise.cpp  blurNoise.h  pluginMain.cpp
